--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     </dependency>
 
 
+
   </dependencies>
 
   <build>
@@ -70,8 +71,20 @@
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.7.1</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>3.4.5</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.2</version>
+          <version>3.1.2</version>
           <configuration>
             <testFailureIgnore>false</testFailureIgnore>
             <argLine>
@@ -102,7 +115,7 @@
         <plugin>
           <groupId>io.qameta.allure</groupId>
           <artifactId>allure-maven</artifactId>
-          <version>2.10.0</version>
+          <version>2.8</version>
           <configuration>
             <reportVersion>2.15.0</reportVersion>
           </configuration>
